--- a/movie_recommender/requirements.txt
+++ b/movie_recommender/requirements.txt
@@ -1,6 +1,7 @@
-numpy>=2.0.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-flask>=2.3.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
+pandas>=2.2.0
+numpy>=1.26.0
+torch>=2.2.0
+scikit-learn>=1.4.0
+seaborn>=0.13.0
+matplotlib>=3.8.0
+flask>=3.0.0
