--- a/movie_recommender/front-end/infrastructure/package.json
+++ b/movie_recommender/front-end/infrastructure/package.json
@@ -11,17 +11,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "@types/node": "20.2.5",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "aws-cdk": "2.1012.0",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.0.4"
+    "@types/jest": "^29.5.11",
+    "@types/node": "20.11.6",
+    "aws-cdk": "2.124.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.3.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.1012.0",
-    "constructs": "^10.2.69",
+    "aws-cdk-lib": "2.124.0",
+    "constructs": "^10.0.0",
+    "netflix-clone-infrastructure": "file:",
     "source-map-support": "^0.5.21"
   }
-} 
+}
