--- a/movie_recommender/front-end/netflix-clone/package.json
+++ b/movie_recommender/front-end/netflix-clone/package.json
@@ -6,18 +6,24 @@
     "@aws-amplify/auth": "^6.12.3",
     "@aws-amplify/core": "^6.11.3",
     "@aws-amplify/ui-react": "^6.11.1",
+    "@aws-sdk/client-appsync": "^3.787.0",
+    "@aws-sdk/client-dynamodb": "^3.788.0",
+    "@aws-sdk/lib-dynamodb": "^3.789.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/aws-sdk": "^2.7.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "aws-amplify": "^6.14.3",
+    "aws-sdk": "^2.1692.0",
     "netflix-clone": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.17",
