--- a/movie_recommender/requirements.txt
+++ b/movie_recommender/requirements.txt
@@ -1,8 +1,10 @@
-pandas>=2.2.0
 numpy>=1.26.0
-torch>=2.2.0
+pandas>=2.2.0
 scikit-learn>=1.4.0
+torch>=2.2.0
+flask>=3.0.2
+flask-cors>=4.0.0
 seaborn>=0.13.0
 matplotlib>=3.8.0
-flask==3.0.2
-gunicorn==21.2.0
+gunicorn>=21.2.0
+setuptools>=69.0.0
